# django_logs_analyser

./: pyproject.toml
src/django_logs_analyser/: main.py
src/django_logs_analyser/reports/: __init__.py  base.py  handlers.py
tests/: test_handlers.py  test_main.py
